--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Psychic Game Demo</title>
-    <link href="assets/images/favicon.png" rel="shortcut icon">
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
     <span class="glyphicons glyphicons-education"></span>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
